   object should become a Math::BigInt unless a Math::BigInt is explicitly
   requested.

 * For Math::BigFloat, modify bitwise operations brsft() and brsft(), and add
   band(), bior(), bxor(), and bnot(). These now handle floating point numbers
   the same way as core Perl does, i.e., truncate non-integers to integers
   before applying the bitwise operator. This change will also make Perl's
   behaviour more consistent whether 'use bignum' is in effect or not.

 * Add overloading of '~' (bitwise not). It just calls bnot(), which has been
   implemented for ages.

 * Fix error in POD for bone().

 * Take parts of the code in t/calling.t and move it into the new files
   t/calling-class-methods.t and t/calling-instance-methods.t.

 * Improve test descriptions in t/mbimbf.inc.

2016-04-25 v1.999719 pjacklam

 * Fix bug in bone() when used as a function. This fix applies to both
   Math::BigInt and Math::BigFloat.

 * Revert the change to Math::BigFloat's blsft() and brsft() methods, which
   truncated the input (and output) to integers. However, now convert the base
   to an object only when the base isn't an object already. Also return NaN if
   any of the three operands is a NaN.

 * Change t/bigfltpm.inc to reflect the changes to blsft() and brsft(). Also,
   when a method should be tested, actually test that method, not the
   overloaded operator, which doesn't necessarily behave in the exact same
   manner as the method. This applies to the methods binc(), bdec(), bpow(),
   badd(), bsub(), bmul(), bdiv() in scalar context, brsft(), blsft(), and
   bmod().

 * The first output argument from objectify() is the class name, so use the
   variable name $class, not $self.

2016-04-26 v1.999720 pjacklam

 * Overloaded 'int' should not modify it's argument.

 * Better documentation of blsft() and brsft().

Please send us test-reports, your experiences with this and your ideas - we love
to hear about our work!

The Math-BigInt developers <bignum@lists.scsys.co.uk>